:bulb: allow LDAP to be moved to worker
